# rhumb

./: .gitignore  LICENSE  README.md  diff.py  endpoints.yaml  models.yaml  pyproject.toml  run.sh
runners/: _lm_eval_chat_template_kwargs_shim.py  quality_chat_lm_eval.py  quality_lm_eval.py  speed_serving.py
scripts/: run_reasoning_sweep.sh
suites/: full.yaml  quick.yaml  reasoning.yaml  standard.yaml  standard_q3.yaml
