[project]
name = "edgexpert-eval-suite"
version = "0.1.0"
description = "Quality + speed benchmark suite for local LLMs on the EdgeXpert (vLLM-served)"
requires-python = ">=3.12"
dependencies = [
    "lm-eval[api]>=0.4.5",  # EleutherAI lm-evaluation-harness; [api] extra adds tenacity etc. for OpenAI-compatible endpoints
    "transformers",         # required by lm-eval for tokenizer access (even when targeting an HTTP model)
    "httpx>=0.28",          # async HTTP client for the speed bench
    "pyyaml",               # config files
    "rich",                 # diff.py table rendering
    "tiktoken",             # rough token counting
    "openai>=1.50",         # OpenAI client (used by lm-eval too)
]

[tool.uv]
package = false

# Pin lm-eval to a main commit because release 0.4.11 still has the
# api_models.py retry-handler bug that shadows real exceptions with
# UnboundLocalError on `outputs` when the request fails before assignment.
# The fix on main uses locals().get('outputs', '(no outputs)') and ships
# diagnostic info instead of a confusing scope error. Re-pin (or drop the
# override) when a release ≥ 0.4.12 lands containing the fix.
[tool.uv.sources]
lm-eval = { git = "https://github.com/EleutherAI/lm-evaluation-harness.git", rev = "243c5463f67231b945f6add5f525e599c080ef63" }
